# deontic-reasoner

./: .editorconfig  .gitignore  MANUAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_file_coverage.py
src/deontic_reasoner/: __init__.py  chaining.py  delegation.py  grounding.py  models.py  preference.py  queries.py  scope.py  serialization.py
tests/: test_chaining_delegation_end_to_end.py  test_chaining_fixed_point.py  test_chaining_power_end_to_end.py  test_delegation_broken_chain.py  test_delegation_narrowing.py  test_delegation_obligations.py  test_grounding_directed_obligation.py  test_grounding_norm.py  test_models_core.py  test_models_norm.py  test_package.py  test_power_exercise.py  test_preference_best_worlds.py  test_preference_ordering.py  test_preference_violates.py  test_queries_basic.py  test_queries_chisholm_paradox.py  test_queries_deontic_explosion.py  test_queries_weighted_conflict.py  test_scope_condition.py  test_scope_matches.py  test_serialization.py
