[project]
name = "deontic-reasoner"
version = "0.1.0"
description = "Hohfeldian + deontic-logic semantic reasoner for AI agent permission governance"
readme = "README.md"
authors = [
    { name = "Stefano Bragaglia", email = "stefano-bragaglia@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "radon>=6.0.1",
    "ruff>=0.15.22",
]
