[project]
name = "deontic-reasoner"
version = "0.1.0"
description = "Hohfeldian + deontic-logic semantic reasoner for AI agent permission governance"
readme = "README.md"
authors = [
    { name = "Stefano Bragaglia", email = "stefano-bragaglia@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-short-docstrings = false
check-class-attributes = false

[dependency-groups]
dev = [
    "pydoclint>=0.9.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "radon>=6.0.1",
    "ruff>=0.15.22",
]
